# agentic_decomposer

./: .gitignore  README.md  pyproject.toml  requirements.txt
agentic_decomposer/: __init__.py  __main__.py  cli.py  config.py  logger.py  paths.py  runs.py
agentic_decomposer/agents/: __init__.py  base.py  decomposition_evaluator.py  decomposition_generator.py  decomposition_refiner.py  domain_extractor.py  evidence_constructor.py  process_controller.py  quality_gate.py
agentic_decomposer/artifacts/: __init__.py  ids.py  schemas.py  validators.py
agentic_decomposer/evidence/: __init__.py  dependency_graph_loader.py  deterministic_views.py  external_views.py  llm_views.py  source_walker.py  summariser.py
agentic_decomposer/helpers/: __init__.py  json_parsing.py
agentic_decomposer/llm/: __init__.py  client.py
agentic_decomposer/metrics/: __init__.py  composite_score.py  engine.py  quality_gate.py
agentic_decomposer/refinement/: __init__.py  (+2 more)
configs/: default.yaml  mvp_all_systems.yaml  mvp_jpetstore.yaml
docs/: README.md  ablation.md  architecture.md  evidence_modes.md  metric_engine.md  mvp_roadmap.md  schemas.md  usage.md
experiments/: run_ablation.py  run_all_systems.py  run_mvp.py
prompts/: domain_extractor.md  evidence_views.md  generator_balanced.md  generator_common.md  generator_dependency_first.md  generator_domain_first.md  refiner.md
schemas/: candidate_decomposition.schema.json  domain_model.schema.json  evaluation_report.schema.json  evidence_pack.schema.json  final_output.schema.json  refinement_patch.schema.json  run_config.schema.json
(+18 files in other folders)
